Placed text-align style on correct component instead of App

--- a/client/src/components/SignupPage/SignupPage.css
+++ b/client/src/components/SignupPage/SignupPage.css
@@ -1,3 +1,7 @@
+.signupPage_container {
+    text-align: center;
+}
+
 .signupPage_container > .card-container {
     margin: 0 auto;
     margin-top: 50px;
